# webgal-craft

./: .gitignore  eslint.config.js  package.json  tsconfig.app.json  tsconfig.base.json  tsconfig.node.json  tsconfig.test.json  vite.config.ts
.github/workflows/: build.yml  cleanup-caches.yml  code-suggestions.yml  dependency-review.yml  lint.yml  pr-artifact-comment.yml  release.yml  rust-lint.yml  rust-test.yml  test.yml  typecheck.yml
integration/: playwright.config.ts
integration/fixtures/: .gitkeep
integration/support/: editor-flow.ts  mock-tauri.ts
integration/tests/: game-creation-and-editor-flow.spec.ts  smoke.spec.ts
scripts/: collectArtifactCommentData.js  formatArtifactComment.js
src/: App.vue  auto-imports.d.ts  components.d.ts  main.ts  route-map.d.ts  vite-env.d.ts
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  window.rs
src-tauri/src/commands/: error.rs  fs.rs  game.rs  mod.rs  server.rs  window.rs
src/__tests__/: browser-render.browser.test.ts  browser-render.test.ts  browser-render.ts  browser.test.ts  browser.ts  factories.test.ts  factories.ts  setup.ts
src/commands/: fs.ts  game.ts  server.ts  thumbnaila.ts  window.ts
src/components/: FilePicker.spec.ts  FilePicker.vue  FileViewer.spec.ts  FileViewer.vue  ModalWindow.vue  Thumbnail.vue
src/composables/: useCommandPanelBridge.ts  useDatabase.ts  useDirectoryReader.ts  useDiscoverResources.ts  useEditorDynamicOptionsBootstrap.ts  useEditorPanelBindings.ts  useEditorSaveShortcut.ts  useEffectEditorDialog.ts  useEffectEditorProvider.ts  useFileSystemEvents.ts  usePointerDrag.ts  useResourcePreviewPrimer.ts  useSettingsForm.ts  useSidebarPanel.ts  useStatementAnimationDialog.ts  useStatementAnimationEditorBridge.ts  useStatementEditor.ts  useStatementEditorContent.ts  useStatementEditorParams.ts  (+19 more)
(+771 files in other folders)
